FIX: Mobile header icon alignment on Safari and Mega Menu Padding

--- a/app/design/frontend/HumanElement/stover_default/Amasty_MegaMenu/web/css/source/_module_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/Amasty_MegaMenu/web/css/source/_module_extend.less
@@ -201,12 +201,119 @@
     }
 }
 
+//
+//  Variables
+//  _____________________________________________
+@ammenu-search-border: 1px solid @color-gray76;
+
+//
+//  Common
+//  _____________________________________________
+
+& when (@media-common = true) {
+
+    .header-search {
+        border-top: @ammenu-search-border;
+        &.active {
+            border-bottom: @ammenu-search-border;
+        }
+    }
+
+    .minisearch.button {
+        &:before {
+            content: url("../images/icon_search.png");
+            height: 25px;
+            width: 25px;
+            display: inline-block;
+        }
+        &.active {
+            &:before {
+                content: url("../images/icon_close.png");
+                line-height: 30px;
+                height: 25px;
+                width: 25px;
+                display: inline-block;
+                text-align: center;
+            }
+        }
+    }
+
+    .block-search {
+        input {
+            font-size: 14px;
+        }
+
+        .control {
+            position: relative;
+        }
+    }
+}
+
+//
+//  Mobile
+//  _____________________________________________
+
+.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .ammenu {
+        &-header-container {
+            .block-search {
+                .minisearch {
+                    .control {
+                        position: unset;
+                        width: auto;
+                    }
+                }
+            }
+        }
+
+        &-menu-title {
+            padding: 25px 0 0 0;
+            .ammenu-button.-close {
+                margin: 0px 0 0 auto;
+                top: -10px;
+                z-index: 3;
+                right: 10px;
+            }
+        }
+
+        &-tabs-list {
+            margin-top: -30px;
+        }
+    }
+    .minisearch.button {
+        margin-right: 10px;
+    }
+
+    .block-search {
+        margin-top: 0;
+    }
+
+}
+
+//
+//  Desktop
+//  _____________________________________________
+
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
+    .header-search {
+        .block-search {
+            max-width: 1280px;
+            margin: auto;
+            padding: 0 22px;
+        }
+    }
+
+    .minisearch.button {
+        margin-right: 20px;
+    }
+}
+
 /* Safari 11+ */
 @media not all and (min-resolution:.001dpcm)
 { @supports (-webkit-appearance:none) and (stroke-color:transparent) {
     .ammenu-mobile {
         .ammenu-button.-hamburger {
-            line-height: 37px;
+            margin-top: 7px;
         }
     }
 }}
